uploading video files, fix css styles and change contact form

--- a/app/sobre/page.module.scss
+++ b/app/sobre/page.module.scss
@@ -1,5 +1,9 @@
 .main {
-  padding-top: 6rem;
+  padding-top: 8rem;
+
+  @media screen and (min-width: 1024px) {
+    padding-top: 10rem;
+  }
 }
 
 .hero {
