--- a/components/Header/Header.module.scss
+++ b/components/Header/Header.module.scss
@@ -15,6 +15,10 @@
   display: flex;
   align-items: center;
   justify-content: space-around;
+
+  @media screen and (min-width: 1024px) {
+    padding: 0rem 0rem;
+  }
 }
 
 .logo {
@@ -33,8 +37,11 @@
 }
 
 .logoImagem {
-  height: 100px;
-  width: auto;
+  height: 150px;
+
+  @media screen and (min-width: 1024px) {
+    height: 200px;
+  }
 }
 
 .desktopMenu {
