--- a/components/Header/Header.module.scss
+++ b/components/Header/Header.module.scss
@@ -11,10 +11,11 @@
 }
 
 .nav {
-  padding: 1rem 1rem;
+  padding: 0.5rem 1.5rem;
   display: flex;
   align-items: center;
   justify-content: space-around;
+  gap: 1.5rem;
 
   @media screen and (min-width: 1024px) {
     padding: 0rem 0rem;
@@ -40,7 +41,7 @@
   height: 150px;
 
   @media screen and (min-width: 1024px) {
-    height: 200px;
+    height: 160px;
   }
 }
 
